# NDKDemo

./: README.md
NDKDemo/: settings.gradle
NDKDemo/app/: build.gradle
NDKDemo/app/src/androidTest/java/com/niluogege/ndkdemo/: ExampleInstrumentedTest.kt
NDKDemo/app/src/main/: AndroidManifest.xml
NDKDemo/app/src/main/cpp/: CMakeLists.txt  LogUtil.cpp  native-lib.cpp
NDKDemo/app/src/main/cpp/giflib/: dgif_lib.c  gif_lib.h
NDKDemo/app/src/main/cpp/inc/: log.h
NDKDemo/app/src/main/cpp/src/: JavaInputStream.cpp  JavaInputStream.h  LogUtil.cpp  com_niluogege_ndkdemo_giflib_GifManager.cpp  com_niluogege_ndkdemo_giflib_GifManager.h  com_niluogege_ndkdemo_signature_Signature.cpp  md5.cpp
NDKDemo/app/src/main/java/com/niluogege/ndkdemo/: MainActivity.kt  Signature.kt
NDKDemo/app/src/main/java/com/niluogege/ndkdemo/giflib/: GifImageView.kt  GifManager.kt  GiflibActivity.kt
NDKDemo/app/src/main/java/com/niluogege/ndkdemo/signature/: Signature.kt  SignatureTestActivity.kt
NDKDemo/app/src/main/res/layout/: activity_giflib.xml  activity_main.xml
NDKDemo/app/src/test/java/com/niluogege/ndkdemo/: ExampleUnitTest.kt
NDKDemo/gradle/wrapper/: gradle-wrapper.properties
